tests/baselines/reference/parserStrictMode9.errors.txt
==== tests/cases/compiler/parserStrictMode9.ts (1 errors) ====
    "use strict";
    var v = function eval() {
                     ~~~~
!!! parserStrictMode9.ts(2,18): error TS1099: Invalid use of 'eval' in strict mode.
    };